--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: #ff3737;
 }
+
 .header h1{
     font-family: 'Bubblegum Sans', cursive;
 font-family: 'Sedgwick Ave Display', cursive;
@@ -39,6 +40,7 @@ top: -45px;
 left: 10px;
 background-image: url("media/images/RS.jpg");
 background-size: cover;
+z-index:9;
 
 
 
@@ -53,7 +55,7 @@ border-width: 13px;
 width: 100%;
 height: 100%;
 position:absolute;
-z-index: 2;
+z-index: 20;
     top: -45px;
     left: 10px;
 
@@ -74,9 +76,9 @@ overflow: hidden;
 
 
 .text1{
-    position: absolute;
+    position: relative;
     z-index: 2222;
-top: 700px;
+top: -10px;
 left: 30px;
 color: black;
 font-weight: bolder;
@@ -85,13 +87,14 @@ text-decoration: underline;
 font-family: 'Sedgwick Ave Display', cursive; ;
 text-align: center;
 white-space: nowrap;
+display: inline;
 
 }
 
 .profile{
-    position: absolute;
+position: relative;
 z-index: 2400;
-top: 15px;
+top: 100px;
 left: 365px;
 white-space: nowrap;
 font-size: 35px;
@@ -101,9 +104,9 @@ color: rgba(0, 0, 77, 0.953);
 }
 
 .answer{
-    position: absolute;
+    position: relative;
     z-index: 2400;
-    top: 15px;
+    top: 100px;
     left: 600px;
     white-space: nowrap;
     font-size: 35px;
@@ -129,9 +132,9 @@ border-width: 14px;
 border-radius: 25px;
 text-align: justify;
 white-space: nowrap;
-position: absolute;
-z-index: 0;
-top: 350px;
+position: relative;
+z-index: 10000;
+top: -425px;
 left: 350px;
 
 
@@ -167,18 +170,18 @@ border-color: rgb(0, 0, 0);
 color: rgb(81, 81, 184);
 font-family:'Bubblegum Sans', cursive;
 white-space: nowrap;
-position: absolute;
-top:350px;
-left:820px;
+position: relative;
+top:-709px;
+left:700px;
 font-size: 30px;
 display: block;
 background-color: #ece1ef;
 border: black solid;
  width: 400px;
-height: 200px;
+height: 198px;
 border-width: 12px;
 list-style: none;
-z-index: 1;
+z-index: 10000;
 
 }
 
@@ -193,8 +196,8 @@ z-index: 1;
 }
 
 .quest{
-    position: absolute;
-    top: 310px;
+    position: relative;
+    top: -975px;
     left: 350px;
     white-space: nowrap;
     font-size: 35px;
